Was revorking image rotate

--- a/Frontend/21.04.2017/Rotate_Image/index.html
+++ b/Frontend/21.04.2017/Rotate_Image/index.html
@@ -7,17 +7,45 @@
 </head>
 <body>
 	<div class="wrapper">
-		<div class="wrap_img">
-			<div class="bgc_img animation_1"></div>
+		<div class="wrap_content">
+			<div class="wrap_img animation_1">
+				<div class="bgc_img_front">
+					<img src="img/front.jpg" alt="card">
+				</div>
+				<div class="bgc_img_back">
+					<img src="img/back.jpg" alt="card">
+				</div>
+			</div>
 		</div>
-		<div class="wrap_img">
-			<div class="bgc_img animation_2"></div>
+		<div class="wrap_content">
+			<div class="wrap_img animation_2">
+				<div class="bgc_img_front">
+					<img src="img/front.jpg" alt="card">
+				</div>
+				<div class="bgc_img_back">
+					<img src="img/back.jpg" alt="card">
+				</div>
+			</div>
 		</div>
-		<div class="wrap_img">
-			<div class="bgc_img animation_3"></div>
+		<div class="wrap_content">
+			<div class="wrap_img animation_3">
+				<div class="bgc_img_front">
+					<img src="img/front.jpg" alt="card">
+				</div>
+				<div class="bgc_img_back">
+					<img src="img/back.jpg" alt="card">
+				</div>
+			</div>
 		</div>
-		<div class="wrap_img">
-			<div class="bgc_img animation_4"></div>
+		<div class="wrap_content">
+			<div class="wrap_img animation_4">
+				<div class="bgc_img_front">
+					<img src="img/front.jpg" alt="card">
+				</div>
+				<div class="bgc_img_back">
+					<img src="img/back.jpg" alt="card">
+				</div>
+			</div>
 		</div>
 	</div>
 </body>
