--- a/Frontend/26.05.2017/index.html
+++ b/Frontend/26.05.2017/index.html
@@ -23,7 +23,7 @@
 				<li><a href="#task10">Задание №10</a></li>
 				<li><a href="#task11">Задание №11</a></li>
 				<li><a href="#task12">Задание №12</a></li>
-				<li><a href="#task12">Тесты</a></li>
+				<li><a href="#tests">Тесты</a></li>
 			</ul>
 			<div class="toggle_mnu">
 				<span class='sandwich'>
