FE HM 05.10 corrected

--- a/Frontend/13.05.2017/4/index.html
+++ b/Frontend/13.05.2017/4/index.html
@@ -3,9 +3,37 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Task 4</title>
+	<link rel="stylesheet" href="main.css">
 </head>
 <body>
-	
+	<div class="wrapper">
+		<div id="monitor"></div>
+		<div class="calc_row">
+			<button class="buttons" value="9">9</button>
+			<button class="buttons" value="8">8</button>
+			<button class="buttons" value="7">7</button>
+		</div>
+		<div class="calc_row">
+			<button class="buttons" value="6">6</button>
+			<button class="buttons" value="5">5</button>
+			<button class="buttons" value="4">4</button>
+		</div>
+		<div class="calc_row">
+			<button class="buttons" value="3">3</button>
+			<button class="buttons" value="2">2</button>
+			<button class="buttons" value="1">1</button>
+		</div>
+		<div class="calc_row">
+			<button class="buttons" value="+">+</button>
+			<button class="buttons" id="result">=</button>
+			<button class="buttons" id="clear">Clear</button>
+		</div>
+		<div class="calc_row">
+			<button class="buttons" value="-">-</button>
+			<button class="buttons" value="/">/</button>
+			<button class="buttons" value="%">%</button>
+		</div>
+	</div>
 	<script src="main.js"></script>
 </body>
 </html>
